Initial commit. File setup, basic html and css.
Basic site structure with simple html / css.

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="grid-container">
+        <div id="header">header</div>
+        <div id="sidebar">sidebar</div>
+        <div id="note">note</div>
+    </div>
 </body>
 </html>
