Basic structre for items and projects.
Terminal version with OOP.

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
     <div id="grid-container">
         <div id="header">header</div>
         <div id="sidebar">sidebar</div>
-        <div id="note">note</div>
+        <div id="to-do">to-do</div>
     </div>
 </body>
 </html>
