Functioning folder and todo sidebar display.

--- a/src/template.html
+++ b/src/template.html
@@ -11,9 +11,12 @@
         <nav id="sidebar"></nav>
 
         <div id="to-do">
-
-            <button id="new-to-do">+</button>
         </div>
+
+        <footer>
+            <button id="new-to-do">+</button>
+            <button id="new-project">++</button>
+        </footer>
     </div>
 </body>
 </html>
