Edit feature for to do items.

--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,7 @@
         <footer>
             <button id="new-to-do">+</button>
             <button id="new-project">++</button>
+            <button id="edit-to-do">Edit</button>
         </footer>
     </div>
 </body>
