Project delete bug fix.

--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,8 @@
             <button id="new-to-do">+</button>
             <button id="new-project">++</button>
             <button id="edit-to-do">Edit</button>
+            <button id="delete">Del</button>
+            <button id="delete-project">Del Proj</button>
         </footer>
     </div>
 </body>
